--- a/index.html
+++ b/index.html
@@ -1,35 +1,162 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en" data-theme="light">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gear Shift</title>
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- DaisyUI + TailWind CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- Custom CSS -->
-     <style>
-        .font-poppins {
-            font-family: "Poppins", sans-serif;
-        }
-     </style>
+    <style>
+      .font-poppins {
+        font-family: "Poppins", sans-serif;
+      }
+    </style>
 
-</head>
-<body>
-    <header>
+    <!-- TailWind Config -->
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                'primary-colour': '#E76F51'
+              }
+            }
+          }
+        }
+      </script>
+  </head>
+  <body class="font-poppins">
+    <header class="md:container mx-auto px-1 md:px-5 lg:px-10 my-5">
+        <!-- NavBar -->
+      <nav>
+        <div class="navbar bg-base-100">
+          <div class="flex-1">
+            <div class="dropdown">
+              <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16"/>
+                </svg>
+              </div>
+              <ul tabindex="0" class="menu menu-sm dropdown-content bg-orange-200 font-bold  rounded-box z-[1] mt-3 w-28 p-2 shadow">
+                <li class="hover:text-primary-colour"><a>Home</a></li>
+                <li class="hover:text-primary-colour"><a>Shop</a></li>
+                <li class="hover:text-primary-colour"><a>News</a></li>
+                <li class="hover:text-primary-colour"><a>Contact</a></li>
+              </ul>
+            </div>
+            <a class="font-bold text-xl lg:text-2xl xl:text-3xl"><span class="font-extrabold text-3xl lg:text-4xl xl:text-5xl text-primary-colour">G</span>ear Shift</a>
+          </div>
+          <div class="hidden lg:flex">
+            <ul class="menu menu-horizontal px-1">
+                <li class="font-semibold hover:text-primary-colour"><a>Home</a></li>
+                <li class="font-semibold hover:text-primary-colour"><a>Shop</a></li>
+                <li class="font-semibold hover:text-primary-colour"><a>News</a></li>
+                <li class="font-semibold hover:text-primary-colour"><a>Contact</a></li>
+            </ul>
+          </div>
+          <div class="">
+            <a class="btn bg-primary-colour hover:bg-primary-colour font-bold text-white rounded-md px-3 py-2">Button</a>
+          </div>
+        </div>
+      </nav>
+
+      <!-- Slider Section -->
+
+      <section class="md:container mx-auto my-5">
+        <div class="carousel w-full">
+            <div id="slide1" class="carousel-item relative w-full">
+                <div class="w-full md:p-16 md:px-16 lg:p-20 lg:px-28 flex justify-center items-center bg-gradient-to-r from-[#ff88381c] to-[#8fb1b4]">
+                    <div class="text-center md:text-left flex flex-col items-center md:flex-row">
+                      <div class="w-4/6 mb-4 md:ml-4 lg:ml-6">
+                          <h1 class="font-bold text-3xl md:text-4xl lg:text-5xl xl:text-6xl mb-5">Ride-on R15 V4 with Smile</h1>
+                          <p class="font-normal text-base text-gray-800 mb-6">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                          <button class="btn bg-primary-colour hover:bg-primary-colour text-white">Purchase</button>
+                      </div>
+                      <div class="flex justify-center items-center md:w-4/6 lg:w-3/6">
+                          <img src="images/slider/bike1.png" alt="">
+                      </div>
+                    </div>
+                    <div class="absolute left-2 right-2 md:left-4 md:right-4 lg:left-14 lg:right-14 top-1/2 flex -translate-y-1/2 transform justify-between">
+                      <a href="#slide4" class="btn btn-circle text-lg bg-transparent border-none hover:bg-orange-100">❮</a>
+                      <a href="#slide2" class="btn btn-circle text-lg bg-transparent border-none hover:bg-orange-100">❯</a>
+                    </div>
+                </div>
+            </div>
+            <div id="slide2" class="carousel-item relative w-full">
+                <div class="w-full md:p-16 md:px-16 lg:p-20 lg:px-28 flex justify-center items-center bg-gradient-to-r from-[#ff88381c] to-[#c94730]">
+                    <div class="text-center md:text-left flex flex-col items-center md:flex-row">
+                      <div class="w-4/6 mb-4 md:ml-4 lg:ml-6">
+                          <h1 class="font-bold text-3xl md:text-4xl lg:text-5xl xl:text-6xl mb-5">Ride-on R15 V4 with Smile</h1>
+                          <p class="font-normal text-base text-gray-800 mb-6">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                          <button class="btn bg-primary-colour hover:bg-primary-colour text-white">Purchase</button>
+                      </div>
+                      <div class="flex justify-center items-center md:w-4/6 lg:w-3/6">
+                          <img src="images/slider/bike2.png" alt="">
+                      </div>
+                    </div>
+                    <div class="absolute left-2 right-2 md:left-4 md:right-4 lg:left-14 lg:right-14 top-1/2 flex -translate-y-1/2 transform justify-between">
+                      <a href="#slide1" class="btn btn-circle text-lg bg-transparent border-none hover:bg-orange-100">❮</a>
+                      <a href="#slide3" class="btn btn-circle text-lg bg-transparent border-none hover:bg-orange-100">❯</a>
+                    </div>
+                </div>
+            </div>
+            <div id="slide3" class="carousel-item relative w-full">
+                <div class="w-full md:p-16 md:px-16 lg:p-20 lg:px-28 flex justify-center items-center bg-gradient-to-r from-[#ff88381c] to-[#fe6f2a]">
+                    <div class="text-center md:text-left flex flex-col items-center md:flex-row">
+                      <div class="w-4/6 mb-4 md:ml-4 lg:ml-6">
+                          <h1 class="font-bold text-3xl md:text-4xl lg:text-5xl xl:text-6xl mb-5">Ride-on R15 V4 with Smile</h1>
+                          <p class="font-normal text-base text-gray-800 mb-6">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                          <button class="btn bg-primary-colour hover:bg-primary-colour text-white">Purchase</button>
+                      </div>
+                      <div class="flex justify-center items-center md:w-4/6 lg:w-3/6">
+                          <img src="images/slider/bike3.png" alt="">
+                      </div>
+                    </div>
+                    <div class="absolute left-2 right-2 md:left-4 md:right-4 lg:left-14 lg:right-14 top-1/2 flex -translate-y-1/2 transform justify-between">
+                      <a href="#slide2" class="btn btn-circle text-lg bg-transparent border-none hover:bg-orange-100">❮</a>
+                      <a href="#slide4" class="btn btn-circle text-lg bg-transparent border-none hover:bg-orange-100">❯</a>
+                    </div>
+                </div>
+            </div>
+            <div id="slide4" class="carousel-item relative w-full">
+                <div class="w-full md:p-16 md:px-16 lg:p-20 lg:px-28 flex justify-center items-center bg-gradient-to-r from-[#ff88381c] to-[#3a5a6a]">
+                    <div class="text-center md:text-left flex flex-col items-center md:flex-row">
+                      <div class="w-4/6 mb-4 md:ml-4 lg:ml-6">
+                          <h1 class="font-bold text-3xl md:text-4xl lg:text-5xl xl:text-6xl mb-5">Ride-on R15 V4 with Smile</h1>
+                          <p class="font-normal text-base text-gray-800 mb-6">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                          <button class="btn bg-primary-colour hover:bg-primary-colour text-white">Purchase</button>
+                      </div>
+                      <div class="flex justify-center items-center md:w-4/6 lg:w-3/6">
+                          <img src="images/slider/bike4.png" alt="">
+                      </div>
+                    </div>
+                    <div class="absolute left-2 right-2 md:left-4 md:right-4 lg:left-14 lg:right-14 top-1/2 flex -translate-y-1/2 transform justify-between">
+                      <a href="#slide3" class="btn btn-circle text-lg bg-transparent border-none hover:bg-orange-100">❮</a>
+                      <a href="#slide1" class="btn btn-circle text-lg bg-transparent border-none hover:bg-orange-100">❯</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </section>
 
     </header>
-    <main>
 
-    </main>
-    <footer>
-        
-    </footer>
-</body>
+    <main class="md:container mx-auto px-1 md:px-5 lg:px-10 my-5"></main>
+    <footer></footer>
+  </body>
 </html>
