Completed the Featured  Section

--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@
           </div>
         </div>
       </nav>
-
       <!-- Slider Section -->
-
       <section class="md:container mx-auto my-5">
         <div class="carousel w-full">
             <div id="slide1" class="carousel-item relative w-full">
@@ -153,10 +151,22 @@
             </div>
         </div>
       </section>
-
     </header>
-
-    <main class="md:container mx-auto px-1 md:px-5 lg:px-10 my-5"></main>
+    <main class="md:container mx-auto px-1 md:px-5 lg:px-10 my-10">
+      <!-- Featured Section -->
+      <section class="border-2 border-red-500">
+        <div class="text-center">
+          <h2 class="font-semibold text-3xl md:text-4xl lg:text-5xl mb-3">Fetured Bikes In This Year</h2>
+          <h3 class="font-semibold text-sm md:text-base text-primary-colour mb-3">Best bike collection</h3>
+          <hr class="border-2 border-[#E76F51] w-20 mx-auto">
+        </div>
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-2 gap-y-4 p-5">
+          <img src="images/others/feature-bike-1.png" alt="" class="mx-auto">
+          <img src="images/others/feature-bike-1.png" alt="" class="mx-auto">
+          <img src="images/others/feature-bike-1.png" alt="" class="mx-auto">
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
