--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
       </nav>
       <!-- Slider Section -->
-      <section class="md:container mx-auto my-5">
+      <section class="md:container mx-auto my-16">
         <div class="carousel w-full">
             <div id="slide1" class="carousel-item relative w-full">
                 <div class="w-full md:p-16 md:px-16 lg:p-20 lg:px-28 flex justify-center items-center bg-gradient-to-r from-[#ff88381c] to-[#8fb1b4]">
@@ -152,20 +152,74 @@
         </div>
       </section>
     </header>
-    <main class="md:container mx-auto px-1 md:px-5 lg:px-10 my-10">
+    <main class="md:container mx-auto">
       <!-- Featured Section -->
-      <section class="border-2 border-red-500">
+      <section class="px-1 md:px-5 lg:px-10 my-16">
         <div class="text-center">
           <h2 class="font-semibold text-3xl md:text-4xl lg:text-5xl mb-3">Fetured Bikes In This Year</h2>
           <h3 class="font-semibold text-sm md:text-base text-primary-colour mb-3">Best bike collection</h3>
           <hr class="border-2 border-[#E76F51] w-20 mx-auto">
         </div>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-2 gap-y-4 p-5">
-          <img src="images/others/feature-bike-1.png" alt="" class="mx-auto">
-          <img src="images/others/feature-bike-1.png" alt="" class="mx-auto">
-          <img src="images/others/feature-bike-1.png" alt="" class="mx-auto">
+          <img src="images/others/Featured/feature-bike-1.png" alt="" class="mx-auto">
+          <img src="images/others/Featured/feature-bike-1.png" alt="" class="mx-auto">
+          <img src="images/others/Featured/feature-bike-1.png" alt="" class="mx-auto">
         </div>
       </section>
+
+      <!-- News Section -->
+       <section class="px-1 md:px-5 lg:px-10 my-16">
+        <div class="text-center mb-12">
+          <h1 class="font-semibold text-3xl md:text-4xl lg:text-5xl"><span class="bg-gray-100 rounded-xl p-2">latest News</span></h1>
+        </div>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
+          <div class="card bg-base-100 w-2/3 shadow-xl mx-auto">
+            <figure>
+              <img src="images/others/Latest/latest1.png" alt="">
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title flex flex-wrap">
+                Ducati XDIAVEL<br>S-73
+                <div class="badge bg-primary-colour font-semibold text-white p-2">NEW</div>
+              </h2>
+              <p class="font-normal text-sm sm:text-base text-[#6C6C6C] mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+              <div class="card-actions flex justify-center md:justify-start">
+                <button class="btn bg-primary-colour hover:bg-primary-colour">Read More</button>
+              </div>
+            </div>
+          </div>
+          <div class="card bg-base-100 w-2/3 shadow-xl mx-auto">
+            <figure>
+              <img src="images/others/Latest/latest2.png" alt="">
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title flex flex-wrap">
+                Motorcycles & Scooters
+                <div class="badge bg-primary-colour font-semibold text-white p-2">NEW</div>
+              </h2>
+              <p class="font-normal text-sm sm:text-base text-[#6C6C6C] mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+              <div class="card-actions flex justify-center md:justify-start">
+                <button class="btn bg-white hover:bg-white text-[#E76F51] border-2 border-[#E76F51]">Read More</button>
+              </div>
+            </div>
+          </div>
+          <div class="card bg-base-100 w-2/3 shadow-xl mx-auto">
+            <figure>
+              <img src="images/others/Latest/latest1.png" alt="">
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title flex flex-wrap">
+                2024 Honda CBR500R
+                <div class="badge bg-primary-colour font-semibold text-white p-2">NEW</div>
+              </h2>
+              <p class="font-normal text-sm sm:text-base text-[#6C6C6C] mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+              <div class="card-actions flex justify-center md:justify-start">
+                <button class="btn bg-white hover:bg-white text-[#E76F51] border-2 border-[#E76F51]">Read More</button>
+              </div>
+            </div>
+          </div>
+        </div>
+       </section>
     </main>
     <footer></footer>
   </body>
