--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.cdnfonts.com/css/miama" rel="stylesheet">
 
     <!-- DaisyUI + TailWind CDN -->
     <link
@@ -24,6 +25,9 @@
     <style>
       .font-poppins {
         font-family: "Poppins", sans-serif;
+      }
+      .font-miama {
+        font-family: "Miama", sans-serif;
       }
     </style>
 
@@ -217,6 +221,72 @@
                 <button class="btn bg-white hover:bg-white text-[#E76F51] border-2 border-[#E76F51]">Read More</button>
               </div>
             </div>
+          </div>
+        </div>
+       </section>
+
+       <!-- Happy Clients Section -->
+       <section class="px-1 md:px-5 lg:px-10 my-16">
+        <div class="text-center mb-12">
+          <h1 class="font-semibold text-3xl md:text-4xl lg:text-5xl">Happy <span class="text-[#E76F51]">Clients says</span></h1>
+        </div>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
+          <div class="flex justify-center items-center space-y-5 p-3 card bg-base-100 w-2/3 shadow-xl mx-auto">
+            <figure>
+              <img src="images/others/User/user-1.png" alt="" class="rounded-full">
+            </figure>
+            <p class="text-center font-medium text-sm sm:text-base text-[#6C6C6C]">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+            <div class="rating flex flex-wrap gap-2">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input
+                type="radio"
+                name="rating-2"
+                class="mask mask-star-2 bg-orange-400"
+                checked="checked" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            </div>
+            <h5 class="font-semibold font-miama text-lg sm:text-xl text-[#23A6F0]">Sarafat Karim</h5>
+            <h4 class="font-semibold text-sm sm:text-base italic text-[#252B42]">Student</h4>
+          </div>
+          <div class="flex justify-center items-center space-y-5 p-3 card bg-base-100 w-2/3 shadow-xl mx-auto">
+            <figure>
+              <img src="images/others/User/user-2.png" alt="" class="rounded-full">
+            </figure>
+            <p class="text-center font-medium text-sm sm:text-base text-[#6C6C6C]">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+            <div class="rating flex flex-wrap gap-2">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input
+                type="radio"
+                name="rating-2"
+                class="mask mask-star-2 bg-orange-400"
+                checked="checked" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            </div>
+            <h5 class="font-semibold font-miama text-lg sm:text-xl text-[#23A6F0]">Sarfuddin Miraz</h5>
+            <h4 class="font-semibold text-sm sm:text-base italic text-[#252B42]">Student</h4>
+          </div>
+          <div class="flex justify-center items-center space-y-5 p-3 card bg-base-100 w-2/3 shadow-xl mx-auto">
+            <figure>
+              <img src="images/others/User/user-3.png" alt="" class="rounded-full">
+            </figure>
+            <p class="text-center font-medium text-sm sm:text-base text-[#6C6C6C]">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+            <div class="rating flex flex-wrap gap-2">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input
+                type="radio"
+                name="rating-2"
+                class="mask mask-star-2 bg-orange-400"
+                checked="checked" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            </div>
+            <h5 class="font-semibold font-miama text-lg sm:text-xl text-[#23A6F0]">Minhazus Salekin</h5>
+            <h4 class="font-semibold text-sm sm:text-base italic text-[#252B42]">Student</h4>
           </div>
         </div>
        </section>
