--- a/index.html
+++ b/index.html
@@ -290,7 +290,89 @@
           </div>
         </div>
        </section>
+
+       <!-- FAQ Section -->
+        <section class="px-1 md:px-5 lg:px-10 my-16">
+          <div class="text-center mb-12">
+            <h1 class="font-semibold text-3xl md:text-4xl lg:text-5xl">Frequently Asked <span class="text-primary-colour">Questions</span></h1>
+          </div>
+          <div class="flex flex-col md:flex-row justify-between xl:px-20 items-center mx-auto">
+            <div class="w-3/4 h-full md:w-1/2 mb-8 mx-auto">
+              <img src="images/others/FAQ/faq.png" alt="">
+            </div>
+            <div class="w-full md:w-1/2 space-y-2">
+              <div class="collapse collapse-arrow bg-base-200">
+                <input type="checkbox" />
+                <div class="collapse-title text-xl font-medium">
+                  What are the most important things I should know about riding a bike?
+                </div>
+                <div class="collapse-content">
+                  <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider.</p>
+                </div>
+              </div>
+              
+              <div class="collapse collapse-arrow bg-base-200">
+                <input type="checkbox" />
+                <div class="collapse-title text-xl font-medium">What are the most important things I should know about riding a bike?</div>
+                <div class="collapse-content">
+                  <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow bg-base-200">
+                <input type="checkbox" />
+                <div class="collapse-title text-xl font-medium">What are the most important things I should know about riding a bike?</div>
+                <div class="collapse-content">
+                  <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow bg-base-200">
+                <input type="checkbox" />
+                <div class="collapse-title text-xl font-medium">What are the most important things I should know about riding a bike?</div>
+                <div class="collapse-content">
+                  <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow bg-base-200">
+                <input type="checkbox" />
+                <div class="collapse-title text-xl font-medium">What are the most important things I should know about riding a bike?</div>
+                <div class="collapse-content">
+                  <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
     </main>
-    <footer></footer>
+
+    <footer class="bg-[#0B0D17] text-white" >
+      <div class="md:container flex flex-col items-center md:flex-row md:justify-between mx-auto px-1 md:px-5 lg:px-10 mt-16 p-10 md:py-20">
+        <div class="flex flex-col items-center md:items-start gap-7 mx-16 mb-10 md:mb-0">
+          <div>
+            <ul class="text-center flex gap-5 flex-wrap justify-center md:justify-start items-center">
+              <li class="text-primary-colour font-semibold">Download Now</li>
+              <li>License</li>
+            </ul>
+          </div>
+          <div >
+            <ul class="text-center flex gap-5 flex-wrap justify-center md:justify-start items-center">
+              <li>About</li>
+              <li>Features</li>
+              <li>Pricing</li>
+              <li>Careers</li>
+              <li>Help</li>
+              <li>Privacy Policy</li>
+            </ul>
+          </div>
+          <div class="md:text-left">
+            <h4>© 2024 bike. All rights reserved</h4>
+          </div>
+        </div>
+        <div class="flex flex-col items-center gap-5">
+          <h3>Get the App</h3>
+          <button class="w-1/3" ><img src="images/others/ios.png" alt="" class="rounded-lg w-full"></button>
+          <button class="w-1/3"><img src="images/others/android.png" alt="" class="rounded-lg w-full"></button>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
