--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <section class="md:container mx-auto my-16">
         <div class="carousel w-full">
             <div id="slide1" class="carousel-item relative w-full">
-                <div class="w-full md:p-16 md:px-16 lg:p-20 lg:px-28 flex justify-center items-center bg-gradient-to-r from-[#ff88381c] to-[#8fb1b4]">
+                <div class="w-full md:p-16 md:px-16 lg:p-20 lg:px-28 flex justify-center items-center bg-gradient-to-r from-[#ff88381c] to-[#2f6469]">
                     <div class="text-center md:text-left flex flex-col items-center md:flex-row">
                       <div class="w-4/6 mb-4 md:ml-4 lg:ml-6">
                           <h1 class="font-bold text-3xl md:text-4xl lg:text-5xl xl:text-6xl mb-5">Ride-on R15 V4 with Smile</h1>
@@ -136,7 +136,7 @@
                 </div>
             </div>
             <div id="slide4" class="carousel-item relative w-full">
-                <div class="w-full md:p-16 md:px-16 lg:p-20 lg:px-28 flex justify-center items-center bg-gradient-to-r from-[#ff88381c] to-[#3a5a6a]">
+                <div class="w-full md:p-16 md:px-16 lg:p-20 lg:px-28 flex justify-center items-center bg-gradient-to-r from-[#ff88381c] to-[#315364]">
                     <div class="text-center md:text-left flex flex-col items-center md:flex-row">
                       <div class="w-4/6 mb-4 md:ml-4 lg:ml-6">
                           <h1 class="font-bold text-3xl md:text-4xl lg:text-5xl xl:text-6xl mb-5">Ride-on R15 V4 with Smile</h1>
@@ -158,7 +158,7 @@
     </header>
     <main class="md:container mx-auto">
       <!-- Featured Section -->
-      <section class="px-1 md:px-5 lg:px-10 my-16">
+      <section class="px-1 md:px-5 lg:px-10 my-16 space-y-4">
         <div class="text-center">
           <h2 class="font-semibold text-3xl md:text-4xl lg:text-5xl mb-3">Fetured Bikes In This Year</h2>
           <h3 class="font-semibold text-sm md:text-base text-primary-colour mb-3">Best bike collection</h3>
@@ -169,10 +169,13 @@
           <img src="images/others/Featured/feature-bike-1.png" alt="" class="mx-auto">
           <img src="images/others/Featured/feature-bike-1.png" alt="" class="mx-auto">
         </div>
+        <div class="text-center">
+          <button class="btn text-white bg-primary-colour hover:bg-primary-colour">More Collection</button>
+        </div>
       </section>
 
       <!-- News Section -->
-       <section class="px-1 md:px-5 lg:px-10 my-16">
+       <section class="px-1 md:px-5 lg:px-10 my-20">
         <div class="text-center mb-12">
           <h1 class="font-semibold text-3xl md:text-4xl lg:text-5xl"><span class="bg-gray-100 rounded-xl p-2">latest News</span></h1>
         </div>
