--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <li class="hover:text-primary-colour"><a>Contact</a></li>
               </ul>
             </div>
-            <a class="font-bold text-xl lg:text-2xl xl:text-3xl"><span class="font-extrabold text-3xl lg:text-4xl xl:text-5xl text-primary-colour">G</span>ear Shift</a>
+            <a class="font-bold text-xl lg:text-2xl xl:text-3xl tracking-widest"><span class="font-extrabold text-3xl lg:text-4xl xl:text-5xl text-primary-colour">G</span>ear Shift</a>
           </div>
           <div class="hidden lg:flex">
             <ul class="menu menu-horizontal px-1">
@@ -79,7 +79,7 @@
         </div>
       </nav>
       <!-- Slider Section -->
-      <section class="md:container mx-auto my-16">
+      <section class="md:container mx-auto my-20">
         <div class="carousel w-full">
             <div id="slide1" class="carousel-item relative w-full">
                 <div class="w-full md:p-16 md:px-16 lg:p-20 lg:px-28 flex justify-center items-center bg-gradient-to-r from-[#ff88381c] to-[#2f6469]">
@@ -158,7 +158,7 @@
     </header>
     <main class="md:container mx-auto">
       <!-- Featured Section -->
-      <section class="px-1 md:px-5 lg:px-10 my-16 space-y-4">
+      <section class="px-1 md:px-5 lg:px-10 my-20 space-y-4">
         <div class="text-center">
           <h2 class="font-semibold text-3xl md:text-4xl lg:text-5xl mb-3">Fetured Bikes In This Year</h2>
           <h3 class="font-semibold text-sm md:text-base text-primary-colour mb-3">Best bike collection</h3>
@@ -229,8 +229,8 @@
        </section>
 
        <!-- Happy Clients Section -->
-       <section class="px-1 md:px-5 lg:px-10 my-16">
-        <div class="text-center mb-12">
+       <section class="px-1 md:px-5 lg:px-10 my-20">
+        <div class="text-center mb-16">
           <h1 class="font-semibold text-3xl md:text-4xl lg:text-5xl">Happy <span class="text-[#E76F51]">Clients says</span></h1>
         </div>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
@@ -295,8 +295,8 @@
        </section>
 
        <!-- FAQ Section -->
-        <section class="px-1 md:px-5 lg:px-10 my-16">
-          <div class="text-center mb-12">
+        <section class="px-1 md:px-5 lg:px-10 my-20">
+          <div class="text-center mb-16">
             <h1 class="font-semibold text-3xl md:text-4xl lg:text-5xl">Frequently Asked <span class="text-primary-colour">Questions</span></h1>
           </div>
           <div class="flex flex-col md:flex-row justify-between xl:px-20 items-center mx-auto">
@@ -347,7 +347,7 @@
         </section>
     </main>
 
-    <footer class="bg-[#0B0D17] text-white" >
+    <footer class="bg-[#0B0D17] text-white my-20" >
       <div class="md:container flex flex-col items-center md:flex-row md:justify-between mx-auto px-1 md:px-5 lg:px-10 mt-16 p-10 md:py-20">
         <div class="flex flex-col items-center md:items-start gap-7 mx-16 mb-10 md:mb-0">
           <div>
