--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         </section>
     </main>
 
-    <footer class="bg-[#0B0D17] text-white my-20" >
+    <footer class="bg-[#0B0D17] text-white mt-20" >
       <div class="md:container flex flex-col items-center md:flex-row md:justify-between mx-auto px-1 md:px-5 lg:px-10 mt-16 p-10 md:py-20">
         <div class="flex flex-col items-center md:items-start gap-7 mx-16 mb-10 md:mb-0">
           <div>
